--- a/src/layout.styl
+++ b/src/layout.styl
@@ -11,7 +11,10 @@
 /* Container
 ----------------------------------------------------------------------------------------------------------------------*/
 .page-container
-  overflow hidden
+  position absolute
+  width 100%
+  height 100%
+  overflow auto
 
 .container
   margin-left auto
