Created its own configuration variable for placeholder color

--- a/src/global.styl
+++ b/src/global.styl
@@ -79,6 +79,9 @@ link_color = primary
 link_color_hover = secondary
 link_transition = all .15s ease
 
+/* Placeholders */
+placeholder_color = secondary
+
 /* Shadow */
 shadow_s = 0 2px 10px rgba(50, 116, 165, 0.2)
 shadow_m = 0 5px 30px rgba(50, 116, 165, 0.18)
