--- a/src/html.styl
+++ b/src/html.styl
@@ -152,16 +152,16 @@ template
 /* Placeholders
 ----------------------------------------------------------------------------------------------------------------------*/
 ::-webkit-input-placeholder
-  color secondary
+  color placeholder_color
 
 :-moz-placeholder
-  color secondary
+  color placeholder_color
 
 ::-moz-placeholder
-  color secondary
+  color placeholder_color
 
 :-ms-input-placeholder
-  color secondary
+  color placeholder_color
 
 /* Fieldsets
 ----------------------------------------------------------------------------------------------------------------------*/
