Fixes to .pull and .pad-0 classes

--- a/src/layout.styl
+++ b/src/layout.styl
@@ -322,28 +322,28 @@ for i in (1..12)
 /* Pull-offsets
 ----------------------------------------------------------------------------------------------------------------------*/
 .pull
-  margin offset_l
+  margin - offset_l
 
 .pull-up,
 .pull-v
-  margin-top offset_l
+  margin-top - offset_l
 
 .pull-down,
 .pull-v
-  margin-bottom offset_l
+  margin-bottom - offset_l
 
 .pull-left,
 .pull-h
-  margin-left offset_l
+  margin-left - offset_l
 
 .pull-right,
 .pull-h
-  margin-right offset_l
+  margin-right - offset_l
 
 /* Padding-offsets
 ----------------------------------------------------------------------------------------------------------------------*/
 .pad-0
-  margin 0
+  padding 0
 
 .pad-xs
   padding offset_xs
